--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,16 +7,15 @@ apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'koin'
 //apply plugin: "com.didi.dokit"
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.1"
 
 
     defaultConfig {
         applicationId "ls.yylx.lscodestore"
 
-
         minSdkVersion 24
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 2
         versionName "1.0.1"
 
@@ -107,6 +106,9 @@ android {
 //        kotlinCompilerExtensionVersion "0.1.0-dev13"
 //    }
 }
+
+
+
 //
 //dokitExt {
 //    //dokit 插件开关
@@ -151,6 +153,7 @@ dependencies {
     implementation project(":basemodule")
     implementation project(":firstmodule")
     implementation project(":secondmodule")
+    implementation project(":flutter")
 
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
@@ -170,10 +173,6 @@ dependencies {
 //    implementation "androidx.ui:ui-layout:0.1.0-dev13"
 //    implementation "androidx.ui:ui-material:0.1.0-dev13"
 
-    def room_version = "2.2.5"
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
 
     debugImplementation "com.didichuxing.doraemonkit:doraemonkit:3.1.8"
     releaseImplementation "com.didichuxing.doraemonkit:doraemonkit-no-op:3.1.8"
@@ -196,4 +195,6 @@ dependencies {
     testImplementation "junit:junit:4.13"
     androidTestImplementation "androidx.test.ext:junit:1.1.1"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
+
+
 }
