--- a/basemodule/build.gradle
+++ b/basemodule/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
 
 //    /**核心库-anko库 ，dsl动态创建view*/
     def anko_version = '0.10.8'
@@ -80,9 +81,9 @@ dependencies {
     //页面
     api "androidx.recyclerview:recyclerview:1.1.0"
     api "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"//用于控制触摸和鼠标驱动的选择
-    api 'androidx.constraintlayout:constraintlayout:2.0.0-beta8' //约束布局
+    api 'androidx.constraintlayout:constraintlayout:2.0.0-rc1' //约束布局
     api 'androidx.viewpager2:viewpager2:1.0.0' //viewpager2
-    api "androidx.paging:paging-runtime-ktx:2.1.2" //   分页加载
+    api "androidx.paging:paging-runtime-ktx:3.0.0-alpha04" // paging3分页加载
 
     //其他
     api "androidx.biometric:biometric:1.0.1" //生物识别
@@ -91,6 +92,14 @@ dependencies {
     api "androidx.autofill:autofill:1.0.0" //自动填写
     api "androidx.browser:browser:1.2.0" //打开浏览器，传递数据
     api "androidx.work:work-runtime-ktx:2.4.0" //WorkManager,应用退出也可以完成
+
+
+
+    api "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    api "androidx.room:room-ktx:$room_version"
+
+
     // camerax库
     def camerax_version = "1.0.0-beta07"
     api "androidx.camera:camera-core:${camerax_version}" //相机库
@@ -137,6 +146,7 @@ dependencies {
     api 'cn.bingoogolapple:bga-qrcode-zbar:1.3.6'//高效二维码库，基于zbar
     api 'com.jaeger.statusbarutil:library:1.5.1' //statusbar库
     api 'com.orhanobut:logger:2.2.0' //log打印库
+    api 'com.google.code.gson:gson:2.8.6' // gson
     api 'com.github.salomonbrys.kotson:kotson:2.5.0' //gson 库的kotlin版本
     api 'com.tencent:mmkv-static:1.0.23' // 替代sp的库，高效，稳定，基于protobuf的本地储存库
     api 'com.just.agentweb:agentweb:4.0.3-beta' // webview库
