--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,11 @@ buildscript {
     ext.nav_version = "2.3.0"
     ext.kotlin_version = "1.4.0-rc"
     ext.isModule = true
-    ext.room_version = "2.3.0-alpha01"
+    ext.room_version = "2.3.0-alpha02"
 
     ext.hilt_version = "2.28-alpha"
     ext.koin_version = "2.1.6"
-    ext.compose_version = "0.1.0-dev15"
+    ext.compose_version = "0.1.0-dev16"
 
     repositories {
         google()
@@ -26,6 +26,7 @@ buildscript {
     }
 
     dependencies {
+//        classpath('com.android.tools.build:gradle:4.2.0-alpha07')
         classpath('com.android.tools.build:gradle:4.2.0-alpha07')
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
@@ -37,6 +38,8 @@ buildscript {
 
 
 allprojects {
+
+
     repositories {
         google()
         jcenter()
@@ -47,6 +50,9 @@ allprojects {
 //        maven("http://dl.bintray.com/kotlin/kotlin-eap")
 //        maven("https://maven.aliyun.com/repository/google")
 //        maven("https://maven.aliyun.com/repository/public")
+
+
+
     }
 }
 
